--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -167,25 +167,15 @@ label[for="autoGetter"] {
     background: #A00000;
 }
 
-#wrapperOfSettings input[type="number"]{
+#wrapperOfSettings input[type="number"] {
     line-height: 50px;
     padding: 20px 10px;
     font-size: larger;
 }
 
-/*#f0, #f1, #f2, #f3, #f4, #f5 {
-    transition: opacity .6s;
-    opacity: 0.7;
+#f0, #f1, #f2, #f3, #f4, #f5 {
+    background-color: #005e50;
 }
-
-#f0:hover, #f1:hover, #f2:hover, #f3:hover, #f4:hover, #f5:hover{
-    opacity: 1;
-}*/
-
-#f0,#f1,#f2,#f3,#f4,#f5{
-    background-color: #004D40;
-}
-
 
 form[name='editWord'] span {
     margin-left: -10px;
@@ -203,11 +193,16 @@ form[name='editWord'] span {
     right: 25%;
 }
 
-#soundControl, #editCurrentWord {
+#soundControl, #editCurrentWord, #trainingMode {
     position: fixed;
     margin-top: 10px;
     top: 20px;
     margin-left: 70%;
+}
+
+#trainingMode {
+    margin-left: 78%;
+    top: 70px;
 }
 
 #editCurrentWord {
@@ -278,7 +273,7 @@ i.material-icons {
     margin-bottom: 100px;
 }
 
-.btn-refresh{
+.btn-refresh {
     display: none;
     width: 150px;
     height: 150px;
@@ -290,7 +285,6 @@ i.material-icons {
     margin-top: 15%;
 }
 
-
 .fixed-action-btn {
     top: 10px;
     right: 90%;
@@ -300,11 +294,49 @@ i.material-icons {
     top: 100px
 }
 
+#wrapperOfModeTraining {
+    width: 80%;
+    height: 70%;
+    text-align: center;
+}
+
+#trainingSide2 {
+    display: none;
+}
+
+.correctly {
+    background: #d4ffd6 !important;
+}
+
+.wrong {
+    background: #f1b1b1 !important;
+}
+
+.training-cards {
+    display: none;
+}
+
+#trainingWord {
+    margin-top: 3%;
+}
+
+.next-word-instruction {
+    position: absolute;
+    left: 2%;
+    top: 2%;
+    color: rgba(0, 27, 31, 0.67);
+}
+
+#inputValidation {
+    width: 50%;
+    font-size: 2rem;
+}
+
 @media only screen and (max-width: 600px) {
     .btn-floating i.menu {
-
         font-size: 1.5rem;
     }
+
     #side1 *, #side2 h1 {
         font-size: 40px;
         overflow-y: scroll;
@@ -352,7 +384,7 @@ i.material-icons {
         left: 1px;
     }
 
-    #soundControl, #editCurrentWord {
+    #soundControl, #editCurrentWord, #trainingMode {
         top: -5px;
         right: 30px;
         margin-right: 10px;
@@ -360,6 +392,11 @@ i.material-icons {
 
     #soundControl {
         width: 30%;
+        right: 0;
+    }
+
+    #trainingMode {
+        top: 25px;
         right: 0;
     }
 
@@ -420,23 +457,21 @@ i.material-icons {
         position: static;
     }
 
-    /*
-    #editAnotherWords a {
-        display: none;
-    }
-    */
     #editAnotherWords p img {
         width: 50%;
     }
 
-    /*    #editAnotherWords li:active a, #editAnotherWords li:hover a {
-            display: block;
-        }*/
+    #wordsLeft {
+        position: fixed;
+        left: -50%;
+        top: -15px;
+        height: 50px;
+    }
+
+    #wordsLeft p {
+        font-size: 35px;
+    }
 }
-
-/*@media only screen and (max-width: 993px) {
-
-}*/
 
 @media only screen and (max-width: 993px) and (min-width: 600px) {
     #toast-container {
@@ -457,11 +492,15 @@ i.material-icons {
         right: auto;
     }
 
-    #soundControl, #editCurrentWord {
+    #soundControl {
         margin-left: 73%;
     }
 
     #editCurrentWord {
+        margin-left: 86%;
+    }
+
+    #trainingMode {
         margin-left: 86%;
     }
 }
@@ -477,9 +516,6 @@ i.material-icons {
         max-width: 86%;
     }
 
-    /*    .menu {
-            right: 50px;
-        }*/
     .toast {
         float: left;
     }
