divider between side1 and side2 in training mode

--- a/views/index.html
+++ b/views/index.html
@@ -220,26 +220,6 @@
             </div>
         </div>
 
-        <div id="wrapperOfModeTraining" class="modal">
-            <img src="img/preloader.gif">
-            <div class="modal-content training-cards">
-                <input id="inputValidation" autofocus type="text" autocomplete="off"
-                       placeholder="enter the translation">
-
-                <div id="trainingSide1">
-                    <h1 id="trainingWord"></h1>
-                </div>
-
-                <div id="trainingSide2">
-                    <h1 id="trainingTranslate"></h1>
-                    <h2 id="trainingTranscription"></h2>
-                    <h2 id="trainingExample" class="flow-text"></h2>
-                </div>
-                <span class="next-word-instruction">press enter to show translate and next word</span>
-            </div>
-        </div>
-
-
         <div id="wrapperAbout" class="modal">
             <div class="modal-content">
                 <h4>Here is the several nuances which seem important to me</h4>
@@ -283,6 +263,28 @@
             </div>
         </div>
     </div>
+
+    <div id="wrapperOfModeTraining" class="modal">
+        <img src="img/preloader.gif">
+        <div class="modal-content training-cards">
+            <input id="inputValidation" autofocus type="text" autocomplete="off"
+                   placeholder="enter the translation">
+
+            <div id="trainingSide1">
+                <h1 id="trainingWord"></h1>
+            </div>
+
+            <div class="divider"></div>
+
+            <div id="trainingSide2">
+                <h1 id="trainingTranslate"></h1>
+                <h2 id="trainingTranscription"></h2>
+                <h2 id="trainingExample" class="flow-text"></h2>
+            </div>
+            <span class="next-word-instruction">press enter to show translate and next word</span>
+        </div>
+    </div>
+
 
 </div>
 
