--- a/views/index.html
+++ b/views/index.html
@@ -239,7 +239,7 @@
                             <li>0 - complete blackout.</li>
                         </ol>
                     </li>
-                    <li>Use hot keys: alt+(0-5) - grade; alt+s - show translate</li>
+                    <li>Use hot keys: alt+(0-5) - grade; alt+s - show translate; alt+r - replay sound</li>
                     <li>You will continue the repetitions of each words until all of these items score at least
                         three
                     </li>
