fix bug with async (belated) downloading imgs which appear in low speed of internet

--- a/views/login.html
+++ b/views/login.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>login</title>
     <meta name="author" content="Maxim Torba">
-    <meta name="description" content="The trainer of foreign words based on learning technique spaced repetitions, which uses sm2 algorithm">
+    <meta name="description"
+          content="The trainer of foreign words based on learning technique spaced repetitions, which uses sm2 algorithm">
     <link rel="shortcut icon" href="/img/favicon.png" type="image/png">
-    <link type="text/css" rel="stylesheet" href="/styles/materialize.min.css" media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="/styles/login.css" type="text/css" media="screen"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -17,9 +18,11 @@
         <div class="col s12 m6 l6 right-align flow-text">
             <p id="about">
                 Hi, here is the trainer of foreign words based on learning technique
-                <a href="https://en.wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="nofollow noopener">spaced repetitions</a>,
+                <a href="https://en.wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="nofollow noopener">spaced
+                    repetitions</a>,
                 which uses
-                <a href="https://www.supermemo.com/english/ol/sm2.htm" target="_blank" rel="nofollow noopener">sm2</a> algorithm.
+                <a href="https://www.supermemo.com/english/ol/sm2.htm" target="_blank" rel="nofollow noopener">sm2</a>
+                algorithm.
             </p>
         </div>
         <div id="separator"></div>
@@ -37,10 +40,10 @@
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 <script type="application/javascript">
 
     $(function () {
-        //    $('html').animate({'opacity', '1'}, 400);
 
         $(document.forms['login']).on('submit', function () {
 
@@ -66,8 +69,6 @@
         });
     });
 
-
 </script>
-<script type="text/javascript" src="/scripts/materialize.min.js"></script>
 </body>
 </html>
