--- a/views/index.html
+++ b/views/index.html
@@ -251,6 +251,8 @@
                         this application will automatically get your words. See settings.
                     </li>
                     <li>LinguaLeo do not have open api, so you need enter your email and password</li>
+                    <li>Or you can install this  <a href="https://github.com/maxim-torba/netAnkiChromeExtension"
+                                          target="_blank" rel="nofollow noopener">extension</a> and add words straight to the your collection</li>
                     <br>
                     <li>Feedback:
                         <ul>
