--- a/views/index.html
+++ b/views/index.html
@@ -241,18 +241,17 @@
                     </li>
                     <li>Use hot keys: alt+(0-5) - grade; alt+s - show translate; alt+r - replay sound</li>
                     <li>You will continue the repetitions of each words until all of these items score at least
-                        three
+                       three
                     </li>
-                    <li>For a comfortable use this app, you can install this
-                        <a href="https://chrome.google.com/webstore/detail/lingualeo-english-transla/nglbhlefjhcjockellmeclkcijildjhi?utm_source=chrome-app-launcher-info-dialog"
-                           target="_blank" rel="nofollow noopener">extension</a>
-                        for your browser and add new words to <a href="http://lingualeo.com/" target="_blank"
-                                                                 rel="nofollow noopener">lingualeo</a>, then
+                    <li>Install this <a href="https://github.com/maxim-torba/netAnkiChromeExtension"
+                                          target="_blank" rel="nofollow noopener">chrome extension</a> 
+                         and add words straight to the your collection remotely</li>
+                    <li>Or use another <a href="https://chrome.google.com/webstore/detail/lingualeo-english-transla/nglbhlefjhcjockellmeclkcijildjhi"
+                           target="_blank" rel="nofollow noopener">chrome extension</a> and add new words to 
+                        <a href="http://lingualeo.com/" target="_blank" rel="nofollow noopener">lingualeo</a> collection, then
                         this application will automatically get your words. See settings.
                     </li>
-                    <li>LinguaLeo do not have open api, so you need enter your email and password</li>
-                    <li>Or you can install this  <a href="https://github.com/maxim-torba/netAnkiChromeExtension"
-                                          target="_blank" rel="nofollow noopener">extension</a> and add words straight to the your collection</li>
+                    <li>LinguaLeo do not have open API, so you need enter your email and password for LinguaLeo account</li>
                     <br>
                     <li>Feedback:
                         <ul>
